BankApp-CD/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp-deployment
  labels:
    app: bankapp

spec:
  replicas: 2

  selector:
    matchLabels:
      app: bankapp

  template:
    metadata:
      labels:
        app: bankapp

    spec:
      containers:
      - name: bankapp
        image: shauyeb009/bankapp:v1

        ports:
        - containerPort: 8080
