BankApp-CD/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service

spec:
  selector:
    app: bankapp

  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

  type: ClusterIP
