BankApp-CD/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankapp-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: bankapp.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: bankapp-service

            port:
              number: 80
